--- a/TankWar.html
+++ b/TankWar.html
@@ -197,6 +197,9 @@
         for(var i=0; i<tanks.length; i++){
             if(tanks[i] == null) continue;
             tanks[i].tMove();
+            if(Date.now() % 99 == 0){
+                tanks[i].shoot();
+            }
         }
     }
 
@@ -279,13 +282,13 @@
         var y = parseInt(this.bodys[0].getAttribute("y"));
         var bullet;
         if (this.direction == U) {
-            bullet = new Bullet(x, y+1, this.direction, bulletColor);
+            if(y < height) bullet = new Bullet(x, y+1, this.direction, bulletColor);
         } else if (this.direction == D) {
-            bullet = new Bullet(x, y-1, this.direction, bulletColor);
+            if(y > 1) bullet = new Bullet(x, y-1, this.direction, bulletColor);
         } else if (this.direction == L) {
-            bullet = new Bullet(x-1, y, this.direction, bulletColor);
+            if(x > 1) bullet = new Bullet(x-1, y, this.direction, bulletColor);
         } else {
-            bullet = new Bullet(x+1, y, this.direction, bulletColor);
+            if(x < width) bullet = new Bullet(x+1, y, this.direction, bulletColor);
         }
         bullets.push(bullet);
     }
