--- a/TankWar.html
+++ b/TankWar.html
@@ -54,7 +54,7 @@
 </div>
 <div id="control">
     <label for="left">
-        Left Tank:<input id="left" value="" readonly>
+        Alive Tank:<input id="left" value="" readonly>
     </label>
     <br>
     <label for="dead">
