all done with some bug

--- a/TankWar.html
+++ b/TankWar.html
@@ -89,8 +89,8 @@
         const D = 40;
         const L = 37;
         const R = 39;
-        var width = 90;
-        var height = 60;
+        var width = 100;
+        var height = 80;
         var isOver = false;
         var stopped = 0;
         var dead = 0;
@@ -113,6 +113,7 @@
         initTank(28, 20);
         generateOtherTank();
         setAllInterval();
+        updateInfo()
     }
 
     function updateInfo(){
