--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </p>
     <p>Source code is
         <a href="https://github.com/Shellbye/TankWar" target="_blank">here</a>,
-        and demo is <a href="http://shellbye.com/TankWar/" target="_blank">here</a>
+        and demo is <a href="http://shellbye.com/TankWar/index.html" target="_blank">here</a>
     </p>
 </div>
 </body>
